--- a/spec/test_app/config/database.yml
+++ b/spec/test_app/config/database.yml
@@ -1,28 +1,30 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
+load_test_sqlite:
   adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+load_test_pg:
+  adapter: postgresql
+  host: localhost
+  port: 5432
+  database: notifiable-development
+  username: matt
+  password: 
 
-production:
+load_test_mysql:
   adapter: mysql2
   encoding: utf8
   database: notifiable
   username: notifiable-rails
   password: notifiable-rails
   host: 127.0.0.1
-  port: 3306
+  port: 3306 
+    
+test:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+
+
