--- a/spec/test_app/config/database.yml
+++ b/spec/test_app/config/database.yml
@@ -26,5 +26,11 @@ test:
   database: db/test.sqlite3
   pool: 5
   timeout: 5000
+  
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 
